feat(clusters): add discovery cache to cluster status (#2162)
- refactor controller into idempotent phases



feat(lifecycle): add phase subroutines executor



feat(lifecycle): update cluster status with discovery cache



feat(clusters): wire phases into controller reconcile lifecycle



feat(bootstrap): use common cleanup finalizer

- use controllerutil CreateOrPtach and CreateOrUpdate



chore(e2e): update finalizer check with common cleanup finalizer



fix(lint): log errors in discovery groups phase

- tidy up!



chore(clusters): discovery cache does requeueAfter 10mins on success / failure



chore(clusters): preserve annotations and data in kubeconfig secret



chore(clusters): set invalid kubeconfig condition on failure of client creation



Automatic generation of CRD API Docs

chore(clusters): set discovery cache to nil on errors



fix(clusters): ready status is not blocked by AllNodesReady and PayloadSchedulable
